Fixed bug #28293. Occasionally mysqlbinlog --hexdump failed with error:   ERROR 1064 (42000) at line ...: You have an error in your   SQL syntax; check the manual that corresponds to your MySQL   server version for the right syntax to use near   'Query thread_id=... exec_time=... error_code=...

When the length of hexadecimal dump of binlog header was
divisible by 16, commentary sign '#' after header was lost.
The Log_event::print_header function has been modified to always
finish hexadecimal binlog header with "\n# ".